--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,24 @@
 
     <groupId>com.github.perryth3platypus</groupId>
     <artifactId>BookVaultApp</artifactId>
-    <version>0-Development hasn't started yet</version>
+    <version>0</version>
 
     <properties>
         <maven.compiler.source>20</maven.compiler.source>
         <maven.compiler.target>20</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>3.1.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>6.2.7.Final</version>
+        </dependency>
+    </dependencies>
 
 </project>
