Added FlatLaf and updated DatabaseConnectorFrame

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
             <artifactId>hibernate-core</artifactId>
             <version>6.2.7.Final</version>
         </dependency>
+        <dependency>
+            <groupId>com.formdev</groupId>
+            <artifactId>flatlaf</artifactId>
+            <version>3.2.5</version>
+        </dependency>
     </dependencies>
 
 </project>
